2018-02-03  Daniel Hawkins
    * server/time.c: Improve change_object to handle multi-tile monster changes.
    * test/unit/server/check_monster_change.c: Add unit test for changing monsters.
    * test/unit/server/Makefile.am: Add new unit test to the build instructions.

2018-01-24  Daniel Hawkins
    * server/login.c: Prevent memory leak of party_name on attempted login of a player with negative hp.

2018-01-23  Daniel Hawkins
    * common/anim.c: Reduce calls to realloc on animation load. Handle failed realloc gracefully.

2018-01-22  Daniel Hawkins
    * server/plugins.c: Fix redundant call to va_end in cfapi_object_move.

2018-01-21  Daniel Hawkins
    * common/init.c: Use strspn for finding the first non-whitespace character in attackmess,
      and allow for tabs to be used as whitespace.
    * socket/request.c: Reorder conditions to prevent segfault if pl is null in esrv_remove_spell.

2018-01-18  Daniel Hawkins
    * lib/artifacts: Fix boots/gauntlets that should posess a damage value that don't. Fixes bug #832.

2018-01-14  Daniel Hawkins
    * server/skills.c: Fix segfault from check for transport when monster uses
      jumping skill.

2018-01-13  Daniel Hawkins
    * lib/artifacts: Make goblin leaders generate facing forward and animate the
      artifact monsters so the versions that have animations use the animation frames.

2018-01-08  Daniel Hawkins
    * common/artifact.c: Expand identified face use of pre-identified items, even
      if the type otherwise need identifying. This makes gems appear with the correct face.

2018-01-07  Daniel Hawkins
    * common/artifact.c: Make artifacts of items that do not need identifying
      appear using their identified face and animation. In particular, this makes
      the randomly-generated tougher monsters (e.g. goblin leaders) differentiable
      from the normal monsters in the room.

2018-01-02  Daniel Hawkins
    * server/shop.c: Make shop pricing treat unidentified items as if they were